# test_task

./: CMakeLists.txt
crashparser/: crashparser.hpp
sample_app/: main.cpp
